src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMER Canada &amp; LATAM</fullName>
                </value>
                <value>
                    <fullName>AMER Central</fullName>
                </value>
                <value>
                    <fullName>AMER Dell Synergy</fullName>
                </value>
                <value>
                    <fullName>AMER East</fullName>
                </value>
                <value>
                    <fullName>AMER New England</fullName>
                </value>
                <value>
                    <fullName>AMER South</fullName>
                </value>
                <value>
                    <fullName>AMER Support Resources</fullName>
                </value>
                <value>
                    <fullName>AMER VMware Synergy</fullName>
                </value>
                <value>
                    <fullName>AMER West</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>APJ Support Resources</fullName>
                </value>
                <value>
                    <fullName>APJ VMWare Synergy</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>EMEA Central</fullName>
                </value>
                <value>
                    <fullName>EMEA Dell Synergy</fullName>
                </value>
                <value>
                    <fullName>EMEA Emerging Area</fullName>
                    <label>EMEA Middle East</label>
                </value>
                <value>
                    <fullName>EMEA South</fullName>
                </value>
                <value>
                    <fullName>EMEA Support Resources</fullName>
                </value>
                <value>
                    <fullName>EMEA UKI</fullName>
                    <label>EMEA UK</label>
                </value>
                <value>
                    <fullName>EMEA VMWare Synergy</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Labs</fullName>
                </value>
                <value>
                    <fullName>WW VMWare Synergy</fullName>
                </value>
                <value>
                    <fullName>Federal Civilian</fullName>
                    <isActive>false</isActive>
                    <label>Federal Civilian</label>
                </value>
                <value>
                    <fullName>Federal DoD/Intel</fullName>
                    <isActive>false</isActive>
                    <label>Federal DoD/Intel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Method_of_Contact__c</fullName>
        <label>Best Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                    <isActive>false</isActive>
                    <label>Portal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookings_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bookings User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Div__c</fullName>
        <formula>CASE(Theater__c,

"AMER", "AMER",
"Federal", "FEDERAL",

"APJ", "APJ",


"EMEA", "EMEA",


'Global' )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Div</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EHSP_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EHSP-Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EU_Safe_Harbour_qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU Safe Harbour qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <label>Hiring Manager</label>
        <relationshipName>Hiring_Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Non_Sales_Opp_Access_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the "Access to Opportunities and Opportunity Products" permission set been added to this user's permissions?</inlineHelpText>
        <label>Non-Sales Opp Access Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Comp_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed is used to identify users who are also on a compensation plan.  Users on a comp plan will be automatically given access to the Callidus app.</description>
        <inlineHelpText>This filed is used to identify users who are also on a compensation plan (so they are not deactivated for not logging in). Users on a comp plan will be automatically given access to the Callidus app.</inlineHelpText>
        <label>On Comp Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pivotal_Customer_Number__c</fullName>
        <description>This field is used to store Pivotal Customer Number</description>
        <label>Pivotal Customer Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profile Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>This field is ready only, please contact the system administrator to change it.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AMER Central</fullName>
                </value>
                <value>
                    <fullName>AMER Data Sales</fullName>
                    <color>#9999FF</color>
                    <label>AMER Data Sales</label>
                </value>
                <value>
                    <fullName>AMER Dell Synergy</fullName>
                </value>
                <value>
                    <fullName>AMER East</fullName>
                </value>
                <value>
                    <fullName>AMER ISR</fullName>
                    <color>#66FFFF</color>
                    <label>AMER ISR</label>
                </value>
                <value>
                    <fullName>AMER Other</fullName>
                    <color>#DDDDDD</color>
                    <label>AMER Other</label>
                </value>
                <value>
                    <fullName>AMER PDE</fullName>
                    <color>#FF9966</color>
                    <label>AMER PDE</label>
                </value>
                <value>
                    <fullName>AMER South</fullName>
                </value>
                <value>
                    <fullName>AMER Sub Renewals</fullName>
                    <color>#FFFF66</color>
                    <label>AMER Sub Renewals</label>
                </value>
                <value>
                    <fullName>AMER-Support</fullName>
                </value>
                <value>
                    <fullName>AMER VMware Synergy</fullName>
                </value>
                <value>
                    <fullName>AMER West</fullName>
                    <color>#A53711</color>
                    <label>AMER West</label>
                </value>
                <value>
                    <fullName>APJ Australia New Zealand</fullName>
                    <color>#990000</color>
                    <label>APJ Australia New Zealand</label>
                </value>
                <value>
                    <fullName>APJ Greater China</fullName>
                    <color>#419249</color>
                    <label>APJ Greater China</label>
                </value>
                <value>
                    <fullName>APJ India</fullName>
                </value>
                <value>
                    <fullName>APJ ISR</fullName>
                    <color>#FF9900</color>
                    <label>APJ ISR</label>
                </value>
                <value>
                    <fullName>APJ Japan</fullName>
                    <color>#641CCF</color>
                    <label>APJ Japan</label>
                </value>
                <value>
                    <fullName>APJ Korea</fullName>
                    <color>#F96FB7</color>
                    <label>APJ Korea</label>
                </value>
                <value>
                    <fullName>APJ Other</fullName>
                    <color>#66E9BD</color>
                    <label>APJ Other</label>
                </value>
                <value>
                    <fullName>APJ South Asia</fullName>
                </value>
                <value>
                    <fullName>APJ Southeast Asia</fullName>
                    <color>#2F5D85</color>
                    <label>APJ Southeast Asia</label>
                </value>
                <value>
                    <fullName>APJ-Support</fullName>
                </value>
                <value>
                    <fullName>APJ VMWare Synergy</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                    <color>#0B24BE</color>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>Central North</fullName>
                    <color>#419249</color>
                    <label>Central North</label>
                </value>
                <value>
                    <fullName>Central West</fullName>
                </value>
                <value>
                    <fullName>Chatter Only</fullName>
                    <color>#663333</color>
                    <label>Chatter Only</label>
                </value>
                <value>
                    <fullName>EMEA - Central</fullName>
                </value>
                <value>
                    <fullName>EMEA Central FSI/Telco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User has permission to book renewal opps</description>
        <label>Renewal Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Source_of_Creation__c</fullName>
        <formula>TEXT(Contact.Source_of_Creation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source of Creation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <inlineHelpText>This field is ready only, please contact the system administrator to change it.</inlineHelpText>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                    <color>#0B6FCE</color>
                    <label>AMER</label>
                </value>
                <value>
                    <fullName>APJ</fullName>
                    <color>#78C953</color>
                    <label>APJ</label>
                </value>
                <value>
                    <fullName>Chatter Only</fullName>
                    <color>#A53711</color>
                    <label>Chatter Only</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#E27001</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>FEDERAL</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <color>#A845DC</color>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>LABS</fullName>
                    <color>#F3D904</color>
                    <label>LABS</label>
                </value>
                <value>
                    <fullName>Synergy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAA_Verification_Link__c</fullName>
        <description>This field is used to hold the UAA verification link.</description>
        <label>UAA Verification Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Create_Date__c</fullName>
        <label>User Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Created_in_UAA__c</fullName>
        <description>This field indicates whether an User has been created in UAA.</description>
        <label>User Created in UAA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>User ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_All__c</fullName>
        <formula>Contact.View_Account_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk_User_ID__c</fullName>
        <description>Legacy field for Service Cloud Implementation</description>
        <inlineHelpText>Legacy field for Service Cloud Implementation</inlineHelpText>
        <label>Zendesk User ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>AMER_Role_User_List</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>AMER</value>
        </filters>
        <label>AMER Role User List</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>AMER_Sales_Manager_Reset_Sent</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Theater__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>AMER</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pivotal - Sales Manager</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AMER &amp; Sales Manager</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>AMER_Sales_Rep_Reset_Sent</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Theater__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>AMER</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pivotal - Sales Rep</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AMER &amp; Sales Rep</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>APJ_Profile_Contains_Sales_Rep</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>APJ</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>sales rep</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APJ &amp; Sales Rep</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>APJ_Role_User_List</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>APJ</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APJ Role User List</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Theater__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Business_Operations_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Business</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Business Operations Users</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>EMEA_Role_User_List</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>EMEA</value>
        </filters>
        <label>EMEA Role User List</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_Managers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>manager</value>
        </filters>
        <label>EMEA &amp; Sales Managers</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_Rep_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>sales rep</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EMEA &amp; Sales Rep</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Exec_Role_User_List</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Executive</value>
        </filters>
        <label>Exec Role User List</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Pivotal_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Community</value>
        </filters>
        <label>Pivotal Community  Users</label>
    </listViews>
    <listViews>
        <fullName>Pivotal_Labs_Users</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>LABS Lead Queue</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>LABS</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Pivotal Labs Users</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Support_Profile_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Pivotal</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>CSR,CE,Support Business Operations,R&amp;D,PKS</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Support Profile Users</label>
    </listViews>
    <listViews>
        <fullName>Users_Who_Haven_t_Logged_During_2014</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Theater__c</columns>
        <columns>Region__c</columns>
        <columns>On_Comp_Plan__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>3/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>On_Comp_Plan__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Users w/ No Login Oct-2017 (no comp)</label>
        <sharedTo>
            <group>SFDC_Support</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Country_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISNULL(ContactId)), ISCHANGED(  CountryCode ),  Country == null)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Country is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Registered_Users_Update_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(Email),
    NOT(CONTAINS( $Profile.Name , "System Administrator")),
				ispickval($User.UserType,'PowerCustomerSuccess')
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email Address cannot be updated. Please Contact your System Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_cannot_Update_PCN</fullName>
        <active>true</active>
        <description>If Account is RegisteredUser. Only then PCN should be editable. Else it should be read-only</description>
        <errorConditionFormula>and(ispickval($User.UserType,'PowerCustomerSuccess'), 
NOT( ISBLANK(PRIORVALUE(Pivotal_Customer_Number__c))),ischanged( Pivotal_Customer_Number__c ))</errorConditionFormula>
        <errorMessage>You are not allowed to change Pivotal Customer Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Users_cannot_change_Manager</fullName>
        <active>true</active>
        <description>Only Sysadmins and Business Operations can change Manager field on Users</description>
        <errorConditionFormula>ISCHANGED( ManagerId ) &amp;&amp; NOT ($Profile.Id = "00eU0000000sNFj") &amp;&amp; NOT ($Profile.Id = "00eU0000000sKBK" ) &amp;&amp; NOT ($Profile.Id = "00eU0000000iV5H" )</errorConditionFormula>
        <errorDisplayField>ManagerId</errorDisplayField>
        <errorMessage>The Manager field is used for Sales Approval processes; please contact SFDC-support@pivotal.io if you need to change your manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Users_cant_change_Employee_Number</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(EmployeeNumber) &amp;&amp; NOT ($Profile.Id = "00eU0000000sNFj") &amp;&amp; NOT ($Profile.Id = "00eU0000000sKBK" ) &amp;&amp; NOT ($Profile.Id = "00eU0000000iV5H" )</errorConditionFormula>
        <errorMessage>Only Admins and Business Operations can change Employee Numbers.</errorMessage>
    </validationRules>
</CustomObject>